--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Css/styles-min.css">
+    <link rel="stylesheet" href="Css/styles.css">
 </head>
 
 <body>
@@ -248,7 +248,8 @@
     </section>
 
 
-    <script src="./Js/main-min.js" charset="UTF-8"></script>
+    <script src="./Js/nav-bar.js" charset="UTF-8"></script>
+    <script src="./Js/cart.js" charset="UTF-8"></script>
 </body>
 
 </html>
