sorted pizza & burger

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
 
             <div id="cart-btn">
-                <button type="button" class="button-styles">Cart (<span id="view-cart-quantity">0</span>) </button>
+                <button  id="cart-btn1" type="button" class="button-styles">Cart (<span id="view-cart-quantity">0</span>) </button>
             </div>
         </section>
 
