sorted hotdogs section

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <input placeholder="Enter your email" type="email">
                 <button type="button" class="button-styles">Sign up</button>
             </form>
-            <footer>Images source: @DuckDuckGo</footer>
+            <footer>Images source: DuckDuckGo</footer>
         </section>
     </div>
 
