changed cart-page styling

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </section>
 
         <section id="contact">
-            <h3>Subscribe❤️</h3>
+            <h3>Contact us❤️</h3>
             <form action="#">
                 <input placeholder="Enter your email" type="email">
                 <button type="button" class="button-styles">Sign up</button>
@@ -227,7 +227,6 @@
     </div>
 
     <section id="cart-page" hidden>
-        <h4>Your cart</h4>
         <div id="cart-display-grid">
             <div class="cart-cols">
                 <h5>Item name</h5>
