--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 <div class="each-product" id="french-fries">
                     <div class="cost-name">
-                        <h3>French fries</h3>
+                        <h3>Fries</h3>
                         <!--3-->
                         <p>$40</p>
                     </div>
