--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <section id="cart-page" hidden>
         <div id="cart-display-grid">
             <div class="cart-cols">
-                <h5>Item name</h5>
+                <h5>Item</h5>
                 <div id="item-name-col"></div>
             </div>
             <div class="cart-cols">
@@ -245,8 +245,7 @@
         <button type="button" class="button-styles" id="go-back">Go back</button>
     </section>
 
-    <script src="./Js/nav-bar.js" charset="UTF-8"></script>
-    <script src="./Js/cart.js" charset="UTF-8"></script>
+    <script src="./Js/main-min.js" charset="UTF-8"></script>
 </body>
 
 </html>
